# project2_Shichkin_Mikhail_M25_555

./: README.md  pyproject.toml
src/: decorators.py
src/primitive_db/: core.py  engine.py  main.py  utils.py
