[tool.poetry]
name = "project2-shichkin-mikhail-m25-555"
version = "0.1.0"
description = "for project work"
authors = ["Shicimiki <shichkinmikhailv@gmail.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.13"
prompt = "^0.4.1"
prettytable = "^3.16.0"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
